add destination to morroco

--- a/index.html
+++ b/index.html
@@ -10,12 +10,15 @@
 
     <div class="container">
         <div class="destination-container">
-            <div class="destination" id="belize">
+            <div class="destination" id="Tunisia">
                 <h2>Tunisia</h2>
             </div>
 
-            <div class="destination" id="barcelona">
+            <div class="destination" id="Algeria">
                 <h2>Algeria</h2>
+            </div>
+            <div class="destination" id="Morroco">
+                <h2>Morroco</h2>
             </div>
         </div>
     </div>
