--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
             <div class="destination" id="Morroco">
                 <h2>Morroco</h2>
             </div>
+            <div class="destination" id="Paris">
+                <h2>Paris</h2>
+            </div>
         </div>
     </div>
 
